# physics-studio

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: ACCESSIBILITY_VERIFICATION.md  ADR-001-SIMULATION-PLUGIN-RUNTIME.md  ADR-002-DEDICATED-FRONTEND-PROTOCOL.md  ARCHITECTURE.md  ARCHITECTURE_MIGRATION.md  DEVELOPMENT.md  EDUCATIONAL_CONTENT_MODEL.md  EDUCATIONAL_VISUAL_ACCURACY.md  EXPANSION_ARCHITECTURE.md  FORMATIVE_ASSESSMENT_ENGINE.md  FRONTEND_EXTRACTION.md  INTERACTIVE_CHARTS.md  INTRODUCTORY_MECHANICS_CURRICULUM.md  LEARNING_PATHWAYS.md  LEARNING_PERSISTENCE.md  LESSON_AUTHORING.md  LINKED_PROJECTILE_PROOF.md  MECHANICS_COURSE_EDUCATIONAL_AUDIT.md  MECHANICS_EXPERIENCE_HARDENING.md  MECHANICS_MILESTONE_RELEASE_READINESS.md  PERFORMANCE.md  PRINCIPAL_ARCHITECT_AUDIT.md  STATUS.md  VISUAL_SYSTEM.md  YAGNI_SCALABILITY_AUDIT.md  curriculum-plan.md
frontend/: eslint.config.js  package-lock.json  package.json  vitest.config.js
frontend/scripts/: build.mjs
frontend/src/: animation.js  assets.js  experience.js  interactive-chart.js  linked-projectile.js  physics-visuals.js  player-runtime.js  vectors.js
physics_playground/: __init__.py  accessibility.py  accessibility_settings.py  application_callbacks.py  binding_catalog.py  contract_validation.py  contracts.py  expansion_catalog.py  expansion_validation.py  frontend_assets.py  frontend_protocol.py  history.py  integrators.py  learning_store.py  model_metadata.py  notebook.py  performance.py  profiles.py  registry.py  reports.py  serialization.py  setup_handoff.py  simulation_binding.py  simulation_bindings.py  simulation_cache.py  simulation_plugin.py  simulation_plugin_validation.py  slice_catalog.py  state_keys.py  units.py  validation.py  version.py
tests/: conftest.py  test_accessibility.py  test_animation_presentation.py  test_application_callbacks.py  test_architecture_dependencies.py  test_assessment_engine.py  test_audience_profiles.py  test_browser_accessibility.py  test_bumper_missions.py  test_cache_decorator.py  test_cannonball_linked_payload.py  test_cannonball_missions.py  test_cannonball_runtime.py  test_compatibility_deprecations.py  test_contracts.py  test_cross_simulation_integration.py  test_diffusion_missions.py  test_education_content.py  test_education_schema.py  test_educational_visual_accuracy.py  test_electric_field_expansion.py  test_expansion_architecture.py  test_expansion_widget_keys.py  test_experiment_notebook.py  test_fluids_expansion.py  test_foundation.py  test_frontend_assets.py  test_frontend_protocol.py  test_gas_laws_runtime.py  test_interactive_charts.py  test_kinematics_lessons.py  test_learning_modes.py  test_learning_pathway.py  test_learning_store.py  test_lesson_renderer.py  test_linked_projectile.py  test_magnetic_force_expansion.py  test_mechanics_course_roadmap.py  test_mechanics_expansion.py  test_mechanics_experience_budgets.py  (+36 more)
(+330 files in other folders)
