[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "physics-playground"
version = "1.0.0"
description = "Interactive physics simulations and educational tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.40",
    "numpy>=1.26",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["physics_playground*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
